sandc/test/fixtures/astRegression/shouldFail/productions/statement/DoMissingWhileCond.sand
pub class DoMissingWhileCond {
    foo() {
        do {

        } while;
    }
}